--- a/local/templates/fors/template_styles.css
+++ b/local/templates/fors/template_styles.css
@@ -105,10 +105,10 @@ h3.cars-gallery__car-name {
 
 .detail_content.category__content ol li,
 .detail_content.category__content ul li {
-    display: list-item;  
-    gap: unset;           
+    display: list-item;
+    gap: unset;
     margin-bottom: clamp(1rem, 0.85rem + 0.7vw, 1.6rem);
-	color: rgb(26 26 26);
+    color: var(--color-text);
 }
 
 .detail_content.category__content ol li:last-child,
