--- a/local/templates/fors/template_styles.css
+++ b/local/templates/fors/template_styles.css
@@ -1,3 +1,38 @@
+@font-face{
+	font-family: 'Geologica';
+	src: url(assets/fonts/Geologica-Light.ttf) format("truetype");
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face{
+	font-family: 'Geologica';
+	src: url(assets/fonts/Geologica-Regular.ttf) format("truetype");
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face{
+	font-family: 'Geologica';
+	src: url(assets/fonts/Geologica-Medium.ttf) format("truetype");
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face{
+	font-family: 'Geologica';
+	src: url(assets/fonts/Geologica-SemiBold.ttf) format("truetype");
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face{
+	font-family: 'Geologica';
+	src: url(assets/fonts/Geologica-Bold.ttf) format("truetype");
+	font-weight: 700;
+	font-style: normal;
+}
+
 .container {
     padding: clamp(1.5rem, 5vw, 2.5rem);
     width: 100%;
