--- a/local/templates/fors/assets/css/ui-kit/price-card.css
+++ b/local/templates/fors/assets/css/ui-kit/price-card.css
@@ -42,6 +42,12 @@
   text-transform: uppercase;
   padding-bottom: 8px;
 }
+.price-card__category-icon {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
 .price-card__title {
   font-size: clamp(0.9rem, 1.5vw, 1.56rem);
   font-weight: 400;
