--- a/local/templates/fors/assets/css/components/office-map.css
+++ b/local/templates/fors/assets/css/components/office-map.css
@@ -137,6 +137,13 @@
   display: block;
 }
 
+.office-map__map iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  display: block;
+}
+
 /* Адаптив для office-map */
 @media (max-width: 992px) {
   .office-map__wrapper {
