Уточнить цвета шапки в темной теме

--- a/local/templates/fors/assets/css/components/header.css
+++ b/local/templates/fors/assets/css/components/header.css
@@ -17,6 +17,10 @@
     border-bottom: 1px solid var(--yellow);
 }
 
+.theme-dark .header--inner {
+  color: var(--color-text);
+}
+
 .header__container {
   display: flex;
   align-items: center;
