--- a/local/templates/fors/assets/css/components/primary-nav.css
+++ b/local/templates/fors/assets/css/components/primary-nav.css
@@ -8,7 +8,7 @@
   list-style: none;
 }
 .primary-nav__link {
-  color: inherit;
+  color: var(--color-text);
   text-decoration: none;
   font-weight: 500;
   transition: color 0.25s ease;
