--- a/local/templates/fors/assets/css/components/primary-nav.css
+++ b/local/templates/fors/assets/css/components/primary-nav.css
@@ -8,10 +8,14 @@
   list-style: none;
 }
 .primary-nav__link {
-  color: inherit;
+  color: var(--color-text);
   text-decoration: none;
   font-weight: 500;
   transition: color 0.25s ease;
+}
+
+.home_page:not(.page-404) .primary-nav__link {
+  color: var(--color-static-text);
 }
 .primary-nav__link:hover,
 .primary-nav__link:focus-visible {
