--- a/local/templates/fors/assets/css/components/categories.css
+++ b/local/templates/fors/assets/css/components/categories.css
@@ -129,6 +129,10 @@
   box-shadow: 0 8px 30px rgba(255, 255, 255, 0.15), 0 4px 10px rgba(255, 255, 255, 0.08);
 }
 
+.theme-dark .categories__slider .price-card__category {
+  color: #000;
+}
+
 .theme-dark .categories__progress-bar {
   background: var(--color-card-bg-dark);
 }
