--- a/local/templates/fors/assets/css/ui-kit/price-card.css
+++ b/local/templates/fors/assets/css/ui-kit/price-card.css
@@ -44,6 +44,9 @@
   text-transform: uppercase;
   padding-bottom: 8px;
 }
+.price-card__category--icon {
+  padding-bottom: 0;
+}
 .price-card__category-icon {
   display: block;
   max-width: 80px;
