--- a/local/templates/fors/assets/css/ui-kit/price-card.css
+++ b/local/templates/fors/assets/css/ui-kit/price-card.css
@@ -44,10 +44,13 @@
   text-transform: uppercase;
   padding-bottom: 8px;
 }
+.price-card__category--icon {
+  padding-bottom: 0;
+}
 .price-card__category-icon {
   display: block;
   max-width: 80px;
-  max-height: 100%;
+  max-height: 90%;
   object-fit: contain;
 }
 .price-card__title {
